Fixed your shit

--- a/site/index.html
+++ b/site/index.html
@@ -60,22 +60,21 @@
  <script id="responders-template" type="text/template">
     <table class="table table-striped">
     <thead>
-      <tr>
-        <th>Name </th>
-        <th>Type</th>
-      </tr>
+        <tr>
+            <th>Name </th>
+            <th>Type</th>
+        </tr>
     </thead>
+    <tbody>
+    </tbody>
 
-    
-    <tbody></tbody>
 
-    
-  </table>
-  <form id="responder-form" action="#" class="form-inline">
-  <input id="name" type="text" class="input-small" placeholder="Name">
-  <input id="type" type="text" class="input-small" placeholder="Type">
-  <button type="button" class="btn add">Add</button>
-  </form>
+    </table>
+    <form id="responder-form" action="#" class="form-inline">
+        <input id="name" type="text" class="input-small" placeholder="Name">
+        <input id="type" type="text" class="input-small" placeholder="Type">
+        <button type="button" class="btn add">Add</button>
+    </form>
 
 
  </script>
